--- a/Mod1_Data_Science_Fundamentals/README
+++ b/Mod1_Data_Science_Fundamentals/README
@@ -1,1 +1,7 @@
+Module 1: Data Science Fundamentals
+
+    Topics:
+        Data Science definitions and applications.
+        Data Mining branches and techniques.
+        Python Fundamentals (Data loading, cleansing, plotting, feature extraction).
 
