Update README formatting for Module 1

--- a/Mod1_Data_Science_Fundamentals/README
+++ b/Mod1_Data_Science_Fundamentals/README
@@ -1,7 +1,5 @@
-Module 1: Data Science Fundamentals
-
-    Topics:
-        Data Science definitions and applications.
-        Data Mining branches and techniques.
-        Python Fundamentals (Data loading, cleansing, plotting, feature extraction).
-
+### 🔹 Module 1: Data Science Fundamentals
+* **Topics:**
+    * Data Science definitions and applications.
+    * Data Mining branches and techniques.
+    * Python Fundamentals (Data loading, cleansing, plotting, feature extraction).
